fixed a few bugs with the product manager, fixed the button color on mobile for the boh order display

--- a/static/css/bohOrderDisplay.css
+++ b/static/css/bohOrderDisplay.css
@@ -145,3 +145,6 @@ html, body {
     overflow: hidden;
 }
 
+button{
+    color:black;
+}
